# todo

./: client.yml  docker-compose.yml  service.yml
client/: CMakeLists.txt  Dockerfile  main.cpp  wait-and-run-client.sh
client/include/: client.hpp
client/src/: client.cpp
db/: Dockerfile  init.sql
server/: CMakeLists.txt  Dockerfile  main.cpp  wait-and-run-server.sh
server/include/: server.hpp
server/src/: cli.cpp  dbi.cpp  server.cpp
